--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
     "passport": "^0.5.2",
@@ -34,7 +35,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -56,6 +58,7 @@
     "jest": "^27.2.5",
     "mysql2": "^2.3.3",
     "prettier": "^2.3.2",
+    "prisma": "^3.9.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
